# NKeyLogger

./: .gitignore  README.md
NKeyLogger/: NKeyLogger.sln
NKeyLogger/NKeyLoggerClient/: ISender.cs  KeyListener.cs  NKeyLoggerClient.csproj  NativeKeyListener.cs  NetworkClient.cs  Program.cs  settings.txt
NKeyLogger/NKeyLoggerLib/: AbstractKeyInfo.cs  AbstractSetting.cs  Cmd.cs  ConstSetting.cs  KeyInfo.cs  Log.cs  NKeyLoggerLib.csproj  Network.cs  Ref.cs  Result.cs  Setting.cs
NKeyLogger/NKeyLoggerServer/: CSVFile.cs  NKeyLoggerServer.csproj  Program.cs  Server.cs  ServiceWorker.cs  StorageManager.cs  setting.txt
NKeyLogger/ReportMaker/: CSVReader.cs  Program.cs  ReportGenerator.cs  ReportMaker.csproj
NKeyLogger/ReportMaker/Properties/: launchSettings.json
NKeyLoggerDLL/: CMakeLists.txt  CMakeSettings.json
NKeyLoggerDLL/src/: KeyResult.h  main.cpp
